--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,14 @@
 {
-  "builds": [{ "src": "index.html", "use": "@vercel/static-build" }],
+  "builds": [
+    {
+      "src": "dist/*",
+      "use": "@vercel/static-build"
+    }
+  ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
