--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,9 @@
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/" }
-  ]
+  ],
+  "rewrites": [
+  { "source": "/(.*)", "destination": "/" }
+]
+
 }
