--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,7 @@
 {
-  "builds": [
-    {
-      "src": "vite.config.ts",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/" }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "rewrites": [
-  { "source": "/(.*)", "destination": "/" }
-]
-
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
